<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="media_button">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="dev_mail">ivanapodlesnykh@yandex.ru</string>
    <string name="mail_to_dev_topic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_to_dev_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search">Поиск</string>
    <string name="practicum_link">https://practicum.yandex.ru/profile/android-developer/</string>

    <string name="error_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

    <string name="not_found_message">Ничего не нашлось</string>

    <string name="reload_button_text">Обновить</string>

    <string name="search_history_title">Вы искали</string>
    <string name="search_history_reload_clear_button">Очистить историю</string>

    <string name="close_playlist_creator_dialog_title">Завершить создание плейлиста?</string>
    <string name="close_playlist_creator_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    
    <string name="do_you_wish_to_delete_track">Хотите удалить трек?</string>

<!--    Track info in player-->
    <string name="info_country">Страна</string>
    <string name="info_genre">Жанр</string>
    <string name="info_year">Год</string>
    <string name="info_album">Альбом</string>
    <string name="info_playtime">Длительность</string>
    <string name="current_playtime_default">00:00</string>

<!--    Media library-->
    <string name="media_library">Медиатека</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist_text">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="no_tracks_in_playlist">Нет треков в плейлисте</string>

    <!--    Plurals-->
    <plurals name="tracks_plurals">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes_plurals">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>