<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/SettingsAndSearchBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/settings_back_button"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_back_icon"
            android:foreground="?attr/selectableItemBackground"
            android:layout_gravity="center"
            style="@style/SettingsTopPanel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:text="@string/settings"
            android:textSize="@dimen/text_size"
            style="@style/SettingsTopPanel"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingStart="@dimen/settings_layout_padding">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dark_theme"
                style="@style/SettingsText" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:paddingRight="@dimen/icon_padding">
                <Switch
                    android:id="@+id/theme_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/share_app"
                style="@style/SettingsText" />
            <ImageView
                android:id="@+id/share_app_button"
                android:src="@drawable/share_icon"
                style="@style/SettingsButton" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/contact_support"
                style="@style/SettingsText" />
            <ImageView
                android:id="@+id/support_button"
                android:src="@drawable/support_icon"
                style="@style/SettingsButton" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/user_agreement"
                style="@style/SettingsText" />
            <ImageView
                android:id="@+id/user_agreement_button"
                android:src="@drawable/arrow_forward_icon"
                style="@style/SettingsButton" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>