<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

<!--    Back button-->
    <ImageView
        android:id="@+id/player_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:foreground="?attr/selectableItemBackground"
        style="@style/PlayerBackButton"
        android:src="@drawable/arrow_back_icon"/>

<!--    Track cover-->
    <ImageView
        android:id="@+id/player_cover_artwork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/player_back_button"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        android:layout_marginTop="@dimen/PlayerArtworkTopMargin"
        android:adjustViewBounds="true"
        android:src="@drawable/player_track_cover_placeholder"/>

    <TextView
        android:id="@+id/player_track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/player_cover_artwork"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        style="@style/PlayerTrackName"
        android:text="Track title"/>
    <TextView
        android:id="@+id/player_artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_track_name"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        style="@style/PlayerArtistName"
        android:text="Artist name"/>
<!-- Buttons-->
    <ImageView
        android:id="@+id/player_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_artist_name"
        app:layout_constraintBottom_toTopOf="@id/player_current_playtime"
        style="@style/PlayerPlayButton"/>

    <ImageView
        android:id="@+id/player_add_to_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/player_play_button"
        app:layout_constraintBottom_toBottomOf="@id/player_play_button"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        style="@style/PlayerAddToPlaylistButton"/>

    <ImageView
        android:id="@+id/player_like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/player_play_button"
        app:layout_constraintBottom_toBottomOf="@id/player_play_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        style="@style/PlayerLikeButton"/>

<!--    Track info-->
    <TextView
        android:id="@+id/player_current_playtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/player_play_button"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_info_playtime_name"
        style="@style/CurrentPlaytime"
        android:text="current playtime"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_info_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_info_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_info_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp"/>

<!--    Playtime-->
    <TextView
        android:id="@+id/track_info_playtime_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_info_album_name"
        style="@style/TrackInfo_names"
        android:text="@string/info_playtime"/>
    <TextView
        android:id="@+id/track_info_playtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_info_album"
        style="@style/TrackInfo"
        android:text="length"/>

<!--    Album-->
    <TextView
        android:id="@+id/track_info_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_info_year_name"
        style="@style/TrackInfo_names"
        android:text="@string/info_album"/>
    <TextView
        android:id="@+id/track_info_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_info_year"
        app:layout_constraintStart_toEndOf="@id/track_info_playtime_name"
        android:gravity="end"
        style="@style/TrackInfo"
        android:text="album title"/>

<!--    Year-->
    <TextView
        android:id="@+id/track_info_year_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_info_genre_name"
        style="@style/TrackInfo_names"
        android:text="@string/info_year"/>
    <TextView
        android:id="@+id/track_info_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_info_genre"
        style="@style/TrackInfo"
        android:text="release year"/>

<!--    Genre-->
    <TextView
        android:id="@+id/track_info_genre_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_info_country_name"
        style="@style/TrackInfo_names"
        android:text="@string/info_genre"/>
    <TextView
        android:id="@+id/track_info_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintBottom_toTopOf="@id/track_info_country"
        style="@style/TrackInfo"
        android:text="genre"/>

<!--    Country-->
    <TextView
        android:id="@+id/track_info_country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_info_guideline"
        app:layout_constraintBottom_toBottomOf="@id/bottom_info_guideline"
        style="@style/TrackInfo_names"
        android:text="@string/info_country"/>
    <TextView
        android:id="@+id/track_info_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
        app:layout_constraintBottom_toBottomOf="@id/bottom_info_guideline"
        style="@style/TrackInfo"
        android:text="country"/>

</androidx.constraintlayout.widget.ConstraintLayout>