<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/SettingsAndSearchBackground">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <!--    Back button-->
        <ImageView
            android:id="@+id/player_back_button"
            style="@style/PlayerBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/arrow_back_icon"
            app:layout_constraintBottom_toTopOf="@id/player_cover_artwork"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <!--    Track cover-->
        <ImageView
            android:id="@+id/player_cover_artwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:src="@drawable/player_track_cover_placeholder"
            app:layout_constraintBottom_toTopOf="@id/player_track_name"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/player_back_button" />

        <TextView
            android:id="@+id/player_track_name"
            style="@style/PlayerTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Track title"
            app:layout_constraintBottom_toTopOf="@id/player_artist_name"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/player_cover_artwork" />

        <TextView
            android:id="@+id/player_artist_name"
            style="@style/PlayerArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Artist name"
            app:layout_constraintBottom_toTopOf="@id/player_play_button"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/player_track_name" />
        <!-- Buttons-->
        <ImageView
            android:id="@+id/player_play_button"
            style="@style/PlayerPlayButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/player_current_playtime"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/player_artist_name"
            app:layout_constraintWidth_percent="0.28" />

        <ImageView
            android:id="@+id/player_add_to_playlist_button"
            style="@style/PlayerAddToPlaylistButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/player_play_button"
            app:layout_constraintHeight_percent="0.061"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/player_play_button"
            app:layout_constraintWidth_percent="0.142" />

        <ImageView
            android:id="@+id/player_like_button"
            style="@style/PlayerLikeButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/player_play_button"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHeight_percent="0.061"
            app:layout_constraintTop_toTopOf="@+id/player_play_button"
            app:layout_constraintWidth_percent="0.142" />

        <!--    Track info-->
        <TextView
            android:id="@+id/player_current_playtime"
            style="@style/CurrentPlaytime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="current playtime"
            app:layout_constraintBottom_toTopOf="@id/track_info_playtime_name"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/player_play_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_info_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_info_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_info_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />

        <!--    Playtime-->
        <TextView
            android:id="@+id/track_info_playtime_name"
            style="@style/TrackInfo_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_playtime"
            app:layout_constraintBottom_toTopOf="@id/track_info_album_name"
            app:layout_constraintStart_toEndOf="@id/left_info_guideline"
            app:layout_constraintTop_toBottomOf="@id/player_current_playtime" />

        <TextView
            android:id="@+id/track_info_playtime"
            style="@style/TrackInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="length"
            app:layout_constraintBottom_toBottomOf="@id/track_info_playtime_name"
            app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
            app:layout_constraintTop_toTopOf="@id/track_info_playtime_name" />

        <!--    Album-->
        <TextView
            android:id="@+id/track_info_album_name"
            style="@style/TrackInfo_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_album"
            app:layout_constraintBottom_toTopOf="@id/track_info_year_name"
            app:layout_constraintStart_toEndOf="@id/left_info_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_info_playtime_name" />

        <TextView
            android:id="@+id/track_info_album"
            style="@style/TrackInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="album title"
            app:layout_constraintBottom_toBottomOf="@id/track_info_album_name"
            app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
            app:layout_constraintStart_toEndOf="@id/track_info_playtime_name"
            app:layout_constraintTop_toTopOf="@id/track_info_album_name" />

        <!--    Year-->
        <TextView
            android:id="@+id/track_info_year_name"
            style="@style/TrackInfo_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_year"
            app:layout_constraintBottom_toTopOf="@id/track_info_genre_name"
            app:layout_constraintStart_toEndOf="@id/left_info_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_info_album_name" />

        <TextView
            android:id="@+id/track_info_year"
            style="@style/TrackInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="release year"
            app:layout_constraintBottom_toBottomOf="@id/track_info_year_name"
            app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
            app:layout_constraintTop_toTopOf="@id/track_info_year_name" />

        <!--    Genre-->
        <TextView
            android:id="@+id/track_info_genre_name"
            style="@style/TrackInfo_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_genre"
            app:layout_constraintBottom_toTopOf="@id/track_info_country_name"
            app:layout_constraintStart_toEndOf="@id/left_info_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_info_year_name" />

        <TextView
            android:id="@+id/track_info_genre"
            style="@style/TrackInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="genre"
            app:layout_constraintBottom_toBottomOf="@id/track_info_genre_name"
            app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
            app:layout_constraintTop_toTopOf="@id/track_info_genre_name" />

        <!--    Country-->
        <TextView
            android:id="@+id/track_info_country_name"
            style="@style/TrackInfo_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_country"
            app:layout_constraintBottom_toBottomOf="@id/bottom_info_guideline"
            app:layout_constraintStart_toEndOf="@id/left_info_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_info_genre_name" />

        <TextView
            android:id="@+id/track_info_country"
            style="@style/TrackInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="country"
            app:layout_constraintBottom_toBottomOf="@id/track_info_country_name"
            app:layout_constraintEnd_toStartOf="@id/right_info_guideline"
            app:layout_constraintTop_toTopOf="@id/track_info_country_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/add_track_to_playlist_bottom_sheet_background"
        app:behavior_hideable="true"
        style="@style/BottomSheet"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/topView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_width="50dp"
            android:layout_height="4dp"
            style="@style/TopView"/>

        <TextView
            android:id="@+id/addToPlaylistTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/topView"
            android:layout_marginTop="30dp"
            android:text="@string/add_to_playlist"
            android:gravity="center"
            style="@style/BottomSheetTitle"/>

        <Button
            android:id="@+id/newPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/addToPlaylistTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="28dp"
            android:text="@string/new_playlist"
            style="@style/NewPlaylistButton"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/newPlaylistButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>